feat: work on the setup command

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     },
     "require": {
-        "statamic/cms": "^5.0"
+        "statamic/cms": "^5.0",
+        "laravel/prompts": "^0.3.5"
     },
     "require-dev": {
         "orchestra/testbench": "^9.0"
