--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
+        "dev": "rm -rf resources/dist/build && STATAMIC_FORCE_SERVE=1 vite",
         "build": "vite build",
         "format": "prettier ./resources/**/*.{css,js,vue} --write"
     },
     "type": "module",
     "devDependencies": {
-        "@vitejs/plugin-vue2": "^2.3.3",
+        "@vitejs/plugin-vue": "^6.0.1",
         "eslint": "^9.7.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-tailwindcss": "^3.17.4",
-        "laravel-vite-plugin": "^1.2.0",
+        "laravel-vite-plugin": "^2.0",
         "prettier": "^3.3.3",
         "prettier-plugin-antlers": "^2.0.4",
         "prettier-plugin-tailwindcss": "^0.6.5",
-        "vite": "^6.3.6"
+        "vite": "^7.1"
     },
     "dependencies": {
+        "@statamic/cms": "file:./vendor/statamic/cms/resources/dist-package",
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.3",
         "nanoid": "^5.1.5",
         "postcss": "^8.5.3",
-        "tailwindcss": "^3.4.13",
-        "vue-spinners-css": "^1.1.5"
+        "tailwindcss": "^3.4.13"
     }
 }
