--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,8 @@
   },
   "require": {
     "statamic/cms": "^6",
+    "laravel/framework": "^12.0",
     "laravel/prompts": "^0.3.5"
-  },
-  "require-dev": {
-    "orchestra/testbench": "^9.0"
   },
   "config": {
     "allow-plugins": {
