--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-tailwindcss": "^3.17.4",
+        "eslint-plugin-vue": "^10.5.1",
         "laravel-vite-plugin": "^2.0",
         "prettier": "^3.3.3",
         "prettier-plugin-antlers": "^2.0.4",
         "prettier-plugin-tailwindcss": "^0.6.5",
-        "vite": "^7.1"
+        "vite": "^7.1",
+        "vue": "^3.5",
+        "vue-eslint-parser": "^10.2.0"
     },
     "dependencies": {
         "@statamic/cms": "file:./vendor/statamic/cms/resources/dist-package",
